<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
            <item
            android:id="@+id/nav_patient1"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_user1" />
        <item
            android:id="@+id/nav_patient2"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_user2" />
        <item
            android:id="@+id/nav_patient3"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_user3" />
        <item
            android:id="@+id/nav_patient4"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_user4" />

    </group>

    <item android:title="@string/nav_title2">
        <menu>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
